# TI-S4

./: .gitignore  .gitmodules  .markdown-link-check.json  2_Building_our_first_robot.md  3_Connect_with_c.md  Portfolio-items.md  README.md  SDG.md  Verantwoordingsdocument_TI_S4.md  Verantwoordingsdocument_TI_S4_New.md  manual gazebo.md
.devcontainer/: Dockerfile  devcontainer.json  install-deps.sh
.github/workflows/: markdown_link_check.yml
_slidev/: Makefile  README.md  example.md  introductie_les.md  lambdas_en_stl.md  les-cpp-templates-comptime.md  les-infrastructuur-desktop-environment.md  les_1_alds.md  les_alds_ds.md  les_alds_grafen.md  les_lambdas_en_stl.md  les_ptr_ref_ub.md  les_sp_dp.md  les_structural_design_patterns.md  package.json  solliciteren_les.md  value_sensitive_design.md
_slidev/setup/: code-runners.ts  monaco.ts
hardware-interfacing/gazebo/: 1_Installing_gazebo.md  2_Building_our_first_robot.md  3_Connect_with_c.md  README.md
hardware-simulatie/gazebo/: 1_Installing_gazebo.md  2_Building_our_first_robot.md  3_Connect_with_c.md  4_Assignment_knowing_your_robot_and_sensors.md  5_Driving_the_robot.md  README.md  (+1 more)
hardware_simulatie/: README.md
hardware_simulatie/overdracht/altum3d1_LATE_269335_6565437_team-megaknight-main-1/team-megaknight-main/FullProject/Arm/: CMakeLists.txt  main.cpp
hardware_simulatie/overdracht/altum3d1_LATE_269335_6565437_team-megaknight-main-1/team-megaknight-main/FullProject/Arm/armControl/: CMakeLists.txt  armControl.cpp  armControl.hpp
hardware_simulatie/overdracht/altum3d1_LATE_269335_6565437_team-megaknight-main-1/team-megaknight-main/FullProject/Arm/motorJoint/: CMakeLists.txt  motorJoint.cpp  motorJoint.hpp
hardware_simulatie/overdracht/altum3d1_LATE_269335_6565437_team-megaknight-main-1/team-megaknight-main/FullProject/Arm/rotationControl/: CMakeLists.txt  rotationControl.cpp  rotationControl.hpp
hardware_simulatie/overdracht/altum3d2_217125_6563926_team-broodje-kroket-main-2/team-broodje-kroket-main/gazebo/movement/: CMakeLists.txt  inverse_kinematics.cpp  inverse_kinematics.hpp  main.cpp  pid_control.cpp  pid_control.hpp  readme.md  utils.hpp
hardware_simulatie/overdracht/futurised1_LATE_359852_6564109_team-de_blussers-main/team-de_blussers-main/Gazebo/models/makeTonksGreat/: CMakeLists.txt  README.md  lidar_subscriber.cc  model.config  publisher.cc  thermal_camera_test.cc  tonk.sdf  wasd_control.cc
hardware_simulatie/overdracht/futurised1_LATE_359852_6564109_team-de_blussers-main/team-de_blussers-main/Gazebo/models/thermal_camera/: CMakeLists.txt  model.config  model.sdf  thermal_camera_test.cc
hardware_simulatie/overdracht/futurised1_LATE_359852_6564109_team-de_blussers-main/team-de_blussers-main/ros2/tonk_mapping/: CMakeLists.txt  package.xml
hardware_simulatie/overdracht/futurised1_LATE_359852_6564109_team-de_blussers-main/team-de_blussers-main/ros2/tonk_mapping/launch/: full_system.launch.py  full_system_classic.launch.py  mapping.launch.py
hardware_simulatie/overdracht/futurised1_LATE_359852_6564109_team-de_blussers-main/team-de_blussers-main/ros2/tonk_mapping/rviz/: full_system.rviz  mapping.rviz
hardware_simulatie/overdracht/futurised1_LATE_359852_6564109_team-de_blussers-main/team-de_blussers-main/ros2/tonk_mapping/src/: README.md  dijkstra_path_planner.cc  fire_navigator.cc  hose_controller.cc  imu_odometry_node.cc  lidar_to_pointcloud.cc  map_accumulator.cc
hardware_simulatie/overdracht/futurised2_LATE_359825_6564389_waterbenders-futurised-2-project-main/waterbenders-futurised-2-project-main/workspace/prototypes/3D-Lidar-Mapping-RTAB/teleop/: teleop  teleop.cc
hardware_simulatie/overdracht/futurised2_LATE_359825_6564389_waterbenders-futurised-2-project-main/waterbenders-futurised-2-project-main/workspace/prototypes/altimeter/: CMakeLists.txt  README.md  altimeter_prototype.cc  altimeter_prototype.sdf
hardware_simulatie/overdracht/greendigger1_353170_6563923_TransferDocuments Moondigger/TransferDocuments Moondigger/Demo/: CMakeLists.txt  DrivableTerrain.stl  README.md  driving.cc  objectRecognition.cc  objectRecognition.hpp  poseSubscriber.cc
hardware_simulatie/overdracht/greendigger2_355662_6564018_GroeneGraversProject/EindProduct/vision/: CMakeLists.txt  README.md  camera.cc  camera.hh  main.cc  vision.py
hardware_simulatie/overdracht/robosub2_351538_6563998_team-nautilus-main/team-nautilus-main/module_dev/: CMakeLists.txt  README.md  SubSimV5.sdf  main.cpp
hardware_simulatie/overdracht/robosub2_351538_6563998_team-nautilus-main/team-nautilus-main/module_dev/ArmCoordinatenMovement/: CMakeLists.txt  Joint.cpp  Joint.hpp  JointController.cpp  JointController.hpp  PIDTest.md  README.md  pid_tuner.py
hardware_simulatie/overdracht/robosub2_351538_6563998_team-nautilus-main/team-nautilus-main/module_dev/IKSolver/: CMakeLists.txt  ForwardKinematics.cpp  InverseKinematics.cpp  KinematicsSim.py  KinematicsSolver.h  README.md
hardware_simulatie/overdracht/robosub2_351538_6563998_team-nautilus-main/team-nautilus-main/module_dev/RobotArm/: CMakeLists.txt  README.md  RobotArm.cpp  RobotArm.hpp
hardware_simulatie/overdracht/robosub2_351538_6563998_team-nautilus-main/team-nautilus-main/module_dev/common/: JointDefintions.h  JointSpec.h  README.md
hardware_simulatie/overdracht/robosub2_351538_6563998_team-nautilus-main/team-nautilus-main/module_dev/computerVision/: README.md  camera.py
hardware_simulatie/overdracht/robosub2_351538_6563998_team-nautilus-main/team-nautilus-main/module_dev/gripper/: README.md  gripperV1.urdf
hardware_simulatie/overdracht/robosub2_351538_6563998_team-nautilus-main/team-nautilus-main/module_dev/subSim/: README.md  SubSimV1.sdf  SubSimV2.sdf  SubSimV3.sdf  SubSimV4.sdf
leerdoelen/: README.md
onderwijsmateriaal/: README.md  manual gazebo.md
organisatorisch/: README.md  documenteren.md  portfolio_items_en_feedback.md
programma/: README - 2025-2026.md  README - old.md  README-2024-2025-AB.md  README-2025-2026-CD.md  README.md  README.md.old  README_periode_1.md
software/: Ontwikkeldocument_template.md
vermogens/: README.md
(+963 files in other folders)
