<?xml version="1.0"?>
<package format="3">
  <name>tonk_mapping</name>
  <version>0.1.0</version>
  <description>LiDAR 3D mapping for Tonk robot</description>
  <maintainer email="you@example.com">eden</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>